--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+html, body, #root, .App {
+  height: 100%;
+  background-color: black;
+  overflow: hidden;
   text-align: center;
+  font-family: 'Montserrat';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  color: white;
+  padding: 50px 0 50px 0;
+  font-size: 1.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flexList {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+  margin: 0 40px 0 40px;
+  width: 250px;
+}
+
+.logo:hover {
+  background-color: #111;
+}
+
+.logo img {
+  padding: 20px;
+  height: 150px;
+  max-width: 200px;
+}
+
+a {
+  text-decoration: none;
   color: white;
+  font-size: 1.2rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (max-width: 600px) {
+  .row {
+    flex-direction: column;
   }
 }
