--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ html, body, #root, .App {
   overflow: hidden;
   text-align: center;
   font-family: 'Montserrat';
+  overflow-y: auto;
 }
 
 .title {
