--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,337 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Geologica);
 
-html, body, #root, .App {
-  height: 100%;
-  background-color: black;
-  overflow: hidden;
-  text-align: center;
+:root {
+  --cWidth: clamp(300px, 90vw, 900px);
+  --pad: clamp(10px, 15vw, 350px)
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.App {
   font-family: 'Montserrat';
-  overflow-y: auto;
-}
-
-.title {
-  color: white;
-  padding: 50px 0 50px 0;
-  font-size: 1.5rem;
-}
-
-.flexList {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  width: 100%;
+  transition: 0.3s;
+  position: relative;
+}
+
+#nav {
+  position: sticky;
+  top: 0;
+  height: 100px;
+  /* width: var(--cWidth); */
+  /* width: 100vw; */
+  width: clamp(0px, 90vw, 1200px);
+  padding: 0 5vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  /* flex-wrap: wrap; */
+  z-index: 10;
+}
+
+.menu {
+  height: 14px;
+  width: 15px;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  left: 40px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: none;
+}
+
+.menuLine {
+  height: 2px;
+  width: 100%;
+  background-color: #000;
+}
+
+#nav > h1 {
+  color: black;
+  font-size: clamp(1.3rem, 1.5vw, 1.5rem);
+  font-weight: 900;
+  cursor: pointer;
+  font-family: 'Geologica';
+}
+
+li {
+  display: inline;
+  margin-left: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+  font-size: clamp(0.95rem, 0.99vw, 10rem);
+}
+
+li::after {
+	content: "";
+	height: 2px;
+	width: 0%;
+	background-color: #000;
+	position: absolute;
+	bottom: 0px;
+  left: 50%;
+  transform: translate(-50%, 3px);
+	transition: all ease-in-out 300ms;
+}
+
+li:hover::after {
+	width: 100%;
+}
+
+.sideMenu {
+  position: absolute;
+  display: none;
+  left: -100px;
+  top: 0;
+  width: 100px;
+  height: 100%;
+  background-color: #f2f4f7;
+}
+
+.sideMenu ul {
+  margin-top: 30px;
+}
+
+.sideMenu li {
+  display: flex;
+  margin-top: 20px;
+}
+
+.page {
+  min-height: calc(100% - 100px);
+  min-height: calc(100svh - 100px);
+  /* width: 100%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: clamp(10px, 5vh, 50px) 5vw;
+  width: clamp(0px, 90vw, 1200px);
+}
+
+.page h1 {
+  align-self: flex-start;
+  border-bottom: 2px solid black;
+}
+
+#centerCont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  column-gap: 100px;
+  row-gap: clamp(20px, 4vh, 70px);
+}
+
+#centerText {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  row-gap: 10px;
+  text-align: left;
+  max-width: 22ch;
+  font-size: clamp(1.8rem, 2vw, 2.25rem);
+}
+
+#centerText > h1 {
+  font-size: clamp(1.8rem, 2vw, 2.25rem);
+  white-space: nowrap;
+  text-align: center;
+  border: none;
+}
+
+#centerText > p {
+  font-size: clamp(0.88rem, 1.3vw, 1.1rem);
+}
+
+#stackIcons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: clamp(28px, 2vw, 36px);
+  column-gap: 20px;
+  margin-top: 20px;
+}
+
+.stackImg {
+  aspect-ratio: 1;
+  border-radius: 50%;
+  object-fit: cover;
+  height: 100%;
+  position: relative;
+}
+
+.stackImg > img {
+  height: 100%;
+}
+
+.stackSpan {
+  position: absolute;
+  font-size: clamp(0.7rem, 0.7vw, 0.9rem);
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -20px;
+  transition: 0.6s;
+  opacity: 0;
+}
+
+.spanShow {
+  opacity: 1;
+}
+
+#stackIcons a, #stackIcons img {
+  aspect-ratio: 1;
+  border-radius: 50%;
+  object-fit: cover;
+  height: 100%;
+}
+
+#centerImg {
+  /* width: 30%; */
+  max-height: 250px;
+  aspect-ratio: 1;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 0 20px #ccc;
+}
+
+#divider {
+  height: 100%;
+  width: 2px;
+  background-color: #000;
+  margin: 0 15px 0 15px;
+  background: linear-gradient(#ffffff00 0%, #000 50%, #ffffff00 100%);
+}
+
+.project {
+  text-decoration: none;
+  color: #000;
+  width: 100%;
+  column-gap: 40px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  align-items: center;
+}
+
+.project h2 {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.projBody {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  /* flex-direction: row-reverse; */
+}
+
+.projRev {
+  flex-direction: row-reverse;
+}
+
+.projBody p {
+  display: flex;
+  flex-direction: column;
+  width: 55%;
+  text-align: justify;
+  row-gap: 10px;
+}
+
+.projBody img {
+  width: 40%;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ccc;
+  overflow: hidden;
+  aspect-ratio: 2.071;
+}
+
+.projImg img {
+  width: 100%;
+  object-fit: cover;
+}
+
+#about p {
+  text-align: justify;
+}
+
+#contact {
+  justify-content: flex-start;
+}
+
+.contactBlock {
+  width: 100%;
   margin-top: 50px;
 }
 
-.row {
+.contactBlock p {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  column-gap: 10px;
+  margin-bottom: 10px;
 }
 
-.logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border-radius: 10px;
-  margin: 0 40px 0 40px;
-  width: 200px;
-}
-
-.logo:hover {
-  background-color: #111;
-}
-
-.logo img {
-  padding: 20px;
-  height: 100px;
-  max-width: 150px;
-}
-
-a {
+.contactBlock a {
   text-decoration: none;
-  color: white;
-  font-size: 1.2rem;
+  color: #000;
 }
 
-@media only screen and (max-width: 600px) {
-  /* .row {
+@media only screen and (max-width: 840px) {
+  #centerCont {
+    flex-direction: column-reverse;
+  }
+
+  .projBody {
     flex-direction: column;
-  } */
-
-  .logo {
-    width: 100px;
+    row-gap: 25px;
   }
 
-  .logo img {
-    padding: 20px;
-    height: 50px;
-    max-width: 100px;
+  .projBody p {
+    width: 100%;
   }
 
-  a {
-    font-size: 1rem;
+  .projBody img {
+    width: 100%;
+  }
+} 
+
+@media only screen and (max-width: 700px) {
+  #nav ul {
+    display: none;
+  }
+
+  .sideMenu {
+    display: flex;
+  }
+
+  .menu {
+    display: flex;
+  }
+
+  #nav {
+    justify-content: center;
+  }
+} 
+
+@media only screen and (max-width: 500px) {
+  #centerText > h1 {
+    white-space:normal;
+    text-align: left;
+  }
+
+  #stackIcons {
+    column-gap: clamp(5px, 2vw, 1000px);
   }
 }
