--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ li {
   font-size: clamp(0.95rem, 0.99vw, 10rem);
 }
 
-li::after {
+#nav li::after {
 	content: "";
 	height: 2px;
 	width: 0%;
@@ -89,7 +89,7 @@ li::after {
 	transition: all ease-in-out 300ms;
 }
 
-li:hover::after {
+#nav li:hover::after {
 	width: 100%;
 }
 
@@ -112,7 +112,7 @@ li:hover::after {
 }
 
 .sideMenu ul {
-  margin-left: 15px;
+  margin-left: 5px;
   margin-bottom: 30px;
 }
 
